--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "prod": "vite build --mode production"
   },
   "devDependencies": {
-    "fuse.js": "^6.4.6",
-    "@tighten/jigsaw-vite-plugin": "^1.0.0",
-    "vite": "^6.2.1",
-    "tailwindcss": "^4.1.0",
     "@tailwindcss/vite": "^4.1.8",
+    "@tighten/jigsaw-vite-plugin": "^1.0.0",
     "alpinejs": "^3.14.1",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "fuse.js": "^6.4.6",
+    "tailwindcss": "^4.1.0",
+    "vite": "^6.2.1"
+  },
+  "dependencies": {
+    "nes.css": "^2.2.1"
   }
 }
